Bug 326883 - Battery Status Not Shown Anywhere
Summary: Battery Status Not Shown Anywhere
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 0.3
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-30 14:37 UTC by Dennis Jansen
Modified: 2013-11-15 16:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Dennis Jansen 2013-10-30 14:37:14 UTC
Although I get a connection, can transfer files and clipboad and URLs and receive phone notifications, I don't see a battery bar. I've tried both 0.3 and git applet versions with the current apk from google play.

Reproducible: Always

Steps to Reproduce:
1. Connect
2. Check Connection
3. Check battery
Actual Results:  
Only laptop battery shows up

Expected Results:  
Phone battery shows up, too.

I'm on the most current Cyanogen 10.1.x, Google Nexus S.
Comment 1 Dennis Jansen 2013-10-30 14:38:23 UTC
I guess it should still show up as shown here: http://www.youtube.com/watch?feature=player_embedded&v=L5KF6gBI8-o#t=57 . But it doesn't.
Comment 2 Dennis Jansen 2013-10-30 14:41:27 UTC
The notifications are not displayed on my system because I don't have the most current Android version which is required for this. But battery notifications are independent from that right?
Comment 3 Albert Vaca Cintora 2013-10-30 17:55:06 UTC
This feature requires a patch to kdelibs that hasn't been included yet. Meanwhile I plan to show it inside the plasmoid in the system tray, but it's not done yet.
Comment 4 Albert Vaca Cintora 2013-11-15 16:58:52 UTC
Git commit 553a6c518e734d72e129ed0d46bf8f090f0d3258 by Albert Vaca.
Committed on 15/11/2013 at 16:41.
Pushed by albertvaka into branch 'master'.

Plasmoid now displays the devices' battery

M  +2    -0    plasmoid/declarativeplugin/CMakeLists.txt
A  +73   -0    plasmoid/declarativeplugin/batteryinterface.cpp     [License: GPL (v2/3)]
A  +65   -0    plasmoid/declarativeplugin/batteryinterface.h     [License: GPL (v2/3)]
M  +2    -0    plasmoid/declarativeplugin/kdeconnectdeclarativeplugin.cpp
M  +23   -6    plasmoid/package/contents/ui/DeviceDelegate.qml
M  +9    -2    plasmoid/package/contents/ui/kdeconnect.qml

http://commits.kde.org/kdeconnect-kde/553a6c518e734d72e129ed0d46bf8f090f0d3258