Plasmoid now displays the devices' battery

BUG: 326883